--- a/fixture/community2/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
+++ b/fixture/community2/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
@@ -43,4 +43,6 @@ create_order_for_new_customer:
                 -
                     order_payment_method: &orderPaymentMethod
                         fields:
-                            purchase_order_number: //input[@id='po_number']                        
+                            purchase_order_number: //input[@id='po_number']
+            messages:
+                zero_payment: //dt[contains(label,'No Payment Information Required')]
