Squashed commit of the following:
commit 6c465c789925dfb0d0da61d0dd844ccc56f07bf3
Author: andrey.vergeles <avergeles@ebay.com>
Date:   Tue Sep 4 15:15:54 2012 +0200

    [HELPER] [DATA] [UIMAP] MAGETWO-3112 - CR Changes
    Merge into KIEV-QA-HAWKS-S8

commit 7571ad2a91513b87932f628e95ea1952a65a091b
Author: Artem Anokhin <aanokhin@ebay.com>
Date:   Fri Aug 31 20:54:49 2012 +0300

    Squashed commit of the following:

    commit c83e28cf52486631d47d965473056ed68215682e
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Fri Aug 31 20:48:23 2012 +0300

        [TESTS] Updated one test MAGETWO-2962 Zero Subtotal Checkout

    commit fd23be390b8badcac402ea0815a5ac4adb3b04c1
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Fri Aug 31 19:55:28 2012 +0300

        [TESTS] Structure of Authorize.net Direct Post changed MAGETWO-2962 Zero Subtotal Checkout

    commit 4d4c78429f0b3f1edfbed0ad225661e44e416578
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Fri Aug 31 19:42:56 2012 +0300

        [TESTS][DATASET] Tests are updated after CR MAGETWO-2962 Zero Subtotal Checkout

    commit e2f7f7c43b7e359992d8b359565a104760ae3b0d
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Fri Aug 31 14:07:40 2012 +0300

        [TEST] Tests are updated pre-CR MAGETWO-2962 Zero Subtotal Checkout

    commit c956be3a7e0af74fa8f362a180768814fc7ce382
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Fri Aug 31 12:39:13 2012 +0300

        [TEST] One Test updated MAGETWO-2962 Zero Subtotal Checkout

    commit d35f526ed53413accfc41800d91e11d4603bc30b
    Author: Artem Anokhin <aanokhin@ebay.com>
    Date:   Thu Aug 30 16:37:05 2012 +0300

    Merging changes MAGETWO-2962 into current sprint 8

commit 67b3d695dd3374fda71bee86fd3cb6db24d6026e
Author: Artem Anokhin <aanokhin@ebay.com>
Date:   Fri Aug 31 20:52:20 2012 +0300

    config.yml updated to default

commit e9d764232c609f803d779d7c8bc5f63e419e96eb
Author: Evgeniy Miskov <emiskov@ebay.com>
Date:   Fr

--- a/dev/tests/functional/fixture/community2/core/Mage/Checkout/data/Payment.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/Checkout/data/Payment.yml
@@ -42,3 +42,9 @@ payment_purchaseorder:
 payment_authorizenetdp:
     payment_method: Credit Card Direct Post (Authorize.net)
     payment_info: *visaAndp
+
+#*********************************************
+#*         Zero Subtotal Checkout            *
+#*********************************************
+payment_zerosubtotal:
+    payment_method: No Payment Information Required
