--- a/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
@@ -39,4 +39,5 @@ paypal_developer:
             general_error: "//*[@id='alert_content']/span[@class='error']"
             success_created_account: "//*[@id='alert_content']/span[@class='message'][text()='You have successfully created a test account. You can view email for this account on the Test Email tab.']"
             failed_account_creation: "//*[@id='alert_content']/span[@class='error'][text()='The account creation process failed, resulting in an incomplete account profile. Please delete this account and start over']"
+            incorrect_information: "//*[@id='alert_content']/span[@class='error'][text()='Some information is incorrect or missing. Please correct your entries and try again.']"
             success_created_account_without_card: "//*[@id='alert_content']/span[@class='message'][text()='Account Created Successfully but failed to add Credit Card and Bank']"
