--- a/fixture/enterprise2/core/Mage/UrlRewrite/data/UrlRewrite.yml
+++ b/fixture/enterprise2/core/Mage/UrlRewrite/data/UrlRewrite.yml
@@ -58,6 +58,7 @@ url_rewrite_category:
 url_rewrite_custom_sample:
     target_path: customer-service
     description: Test description
+    request_store: Default Store View
 
 new_cms_page_req_ee:
     page_information:
