--- a/fixture/default/core/Mage/_uimapIncludes/admin.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/admin.yml
@@ -85,10 +85,10 @@ admin_header:
                             element_with_class_not_active: "%elementXpath%[not(contains(@class,'active'))]"
                             element_by_id: "//*[@id='%elementId%']"
         messages:
-            general_notice: "//*[normalize-space(@class)='notice-msg']"
-            general_success: "//*[normalize-space(@class)='success-msg']"
-            general_error: "//*[normalize-space(@class)='error-msg']"
-            general_validation: "//*[normalize-space(@class)='validation-advice']"
+            general_notice: "//*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
+            general_success: "//*[normalize-space(@class)='success-msg'][string-length(.)>1]"
+            general_error: "//*[normalize-space(@class)='error-msg'][string-length(.)>1]"
+            general_validation: "//*[normalize-space(@class)='validation-advice'][string-length(.)>1]"
             #general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
             #general_success: "//*/descendant::*[normalize-space(@class)='success-msg'][string-length(.)>1]"
             #general_error: "//*/descendant::*[normalize-space(@class)='error-msg'][string-length(.)>1]"
