--- a/fixture/default/core/Mage/SystemConfiguration/data/ShippingMethod.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/data/ShippingMethod.yml
@@ -30,106 +30,111 @@ flatrate_enable:
     tab_1: &flatrate
         tab_name: sales_shipping_methods
         configuration:
-            flat_rate_enabled: Yes
-            flat_rate_title: Flat Rate
-            flat_rate_method_name: Fixed
-            flat_rate_type: Per Item
-            flat_rate_price: 5.00
-            flat_rate_calculate_handling_fee: Fixed
-            flat_rate_handling_fee: %noValue%
-            flat_rate_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            flat_rate_ship_to_applicable_countries: All Allowed Countries
-            flat_rate_ship_to_specific_countries: %noValue%
-            flat_rate_show_method_if_not_applicable: %noValue%
-            flat_rate_sort_order: %noValue%
+            flat_rate:
+                flat_rate_enabled: Yes
+                flat_rate_title: Flat Rate
+                flat_rate_method_name: Fixed
+                flat_rate_type: Per Item
+                flat_rate_price: 5.00
+                flat_rate_calculate_handling_fee: Fixed
+                flat_rate_handling_fee: %noValue%
+                flat_rate_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                flat_rate_ship_to_applicable_countries: All Allowed Countries
+                flat_rate_ship_to_specific_countries: %noValue%
+                flat_rate_show_method_if_not_applicable: %noValue%
+                flat_rate_sort_order: %noValue%
 
 tablerate_enable:
     configuration_scope: Default Config
     tab_1: &tablerate
         tab_name: sales_shipping_methods
         configuration:
-            table_rates_enabled: Yes
-            table_rates_ship_to_applicable_countries: All Allowed Countries
+            table_rates:
+                table_rates_enabled: Yes
+                table_rates_ship_to_applicable_countries: All Allowed Countries
 
 free_enable:
     configuration_scope: Default Config
     tab_1: &free
         tab_name: sales_shipping_methods
         configuration:
-            free_shipping_enabled: Yes
-            free_shipping_title: Free Shipping
-            free_shipping_method_name: Free
-            free_shipping_minimum_order_amount: 1
-            free_shipping_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            free_shipping_ship_to_applicable_countries: All Allowed Countries
-            free_shipping_ship_to_specific_countries: %noValue%
-            free_shipping_show_method_if_not_applicable: %noValue%
-            free_shipping_sort_order: %noValue%
+            free_shipping:
+                free_shipping_enabled: Yes
+                free_shipping_title: Free Shipping
+                free_shipping_method_name: Free
+                free_shipping_minimum_order_amount: 1
+                free_shipping_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                free_shipping_ship_to_applicable_countries: All Allowed Countries
+                free_shipping_ship_to_specific_countries: %noValue%
+                free_shipping_show_method_if_not_applicable: %noValue%
+                free_shipping_sort_order: %noValue%
 
 ups_enable:
     configuration_scope: Default Config
     tab_1: &ups
         tab_name: sales_shipping_methods
         configuration:
-            ups_enabled: Yes
-            ups_ups_type: United Parcel Service
-            ups_gateway_url: http://www.ups.com/using/services/rave/qcostcgi.cgi
-            ups_title: United Parcel Service
-            ups_container: %noValue%
-            ups_destination_type: %noValue%
-            ups_weight_unit: %noValue%
-            ups_pickup_method: %noValue%
-            ups_maximum_package_weight: 150
-            ups_minimum_package_weight: 0.1
-            ups_calculate_handling_fee: %noValue%
-            ups_handling_applied: %noValue%
-            ups_handling_fee: %noValue%
-            ups_allowed_methods: All
-            ups_free_method: %noValue%
-            ups_free_shipping_with_minimum_order_amount: %noValue%
-            ups_minimum_order_amount_for_free_shipping: %noValue%
-            ups_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            ups_ship_to_applicable_countries: All Allowed Countries
-            ups_ship_to_specific_countries: %noValue%
-            ups_debug: Yes
-            ups_show_method_if_not_applicable: Yes
-            ups_sort_order: %noValue%
+            ups:
+                ups_enabled: Yes
+                ups_ups_type: United Parcel Service
+                ups_gateway_url: http://www.ups.com/using/services/rave/qcostcgi.cgi
+                ups_title: United Parcel Service
+                ups_container: %noValue%
+                ups_destination_type: %noValue%
+                ups_weight_unit: %noValue%
+                ups_pickup_method: %noValue%
+                ups_maximum_package_weight: 150
+                ups_minimum_package_weight: 0.1
+                ups_calculate_handling_fee: %noValue%
+                ups_handling_applied: %noValue%
+                ups_handling_fee: %noValue%
+                ups_allowed_methods: All
+                ups_free_method: %noValue%
+                ups_free_shipping_with_minimum_order_amount: %noValue%
+                ups_minimum_order_amount_for_free_shipping: %noValue%
+                ups_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                ups_ship_to_applicable_countries: All Allowed Countries
+                ups_ship_to_specific_countries: %noValue%
+                ups_debug: Yes
+                ups_show_method_if_not_applicable: Yes
+                ups_sort_order: %noValue%
 
 upsxml_enable:
     configuration_scope: Default Config
     tab_1: &upsxml
         tab_name: sales_shipping_methods
         configuration:
-            ups_enabled: Yes
-            ups_ups_type: United Parcel Service XML
-            ups_password: magento200
-            ups_access_license_number: 8C7A97595F3B8818
-            ups_userid: magento
-            ups_mode: Development
-            ups_gateway_xml_url: https://onlinetools.ups.com/ups.app/xml/Rate
-            ups_origin_of_the_shipment: United States Domestic Shipments
-            ups_enable_negotiated_rates: Yes
-            ups_title: United Parcel Service XML
-            ups_shipper_number: 207W88
-            ups_container: %noValue%
-            ups_destination_type: %noValue%
-            ups_tracking_xml_url: net uimap
-            ups_pickup_method: %noValue%
-            ups_maximum_package_weight: 150
-            ups_minimum_package_weight: 0.1
-            ups_calculate_handling_fee: %noValue%
-            ups_handling_applied: %noValue%
-            ups_handling_fee: %noValue%
-            ups_allowed_methods: All
-            ups_free_method: %noValue%
-            ups_free_shipping_with_minimum_order_amount: %noValue%
-            ups_minimum_order_amount_for_free_shipping: %noValue%
-            ups_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            ups_ship_to_applicable_countries: All Allowed Countries
-            ups_ship_to_specific_countries: %noValue%
-            ups_debug: Yes
-            ups_show_method_if_not_applicable: Yes
-            ups_sort_order: %noValue%
+            ups:
+                ups_enabled: Yes
+                ups_ups_type: United Parcel Service XML
+                ups_password: magento200
+                ups_access_license_number: 8C7A97595F3B8818
+                ups_userid: magento
+                ups_mode: Development
+                ups_gateway_xml_url: https://onlinetools.ups.com/ups.app/xml/Rate
+                ups_origin_of_the_shipment: United States Domestic Shipments
+                ups_enable_negotiated_rates: Yes
+                ups_title: United Parcel Service XML
+                ups_shipper_number: 207W88
+                ups_container: %noValue%
+                ups_destination_type: %noValue%
+                ups_tracking_xml_url: net uimap
+                ups_pickup_method: %noValue%
+                ups_maximum_package_weight: 150
+                ups_minimum_package_weight: 0.1
+                ups_calculate_handling_fee: %noValue%
+                ups_handling_applied: %noValue%
+                ups_handling_fee: %noValue%
+                ups_allowed_methods: All
+                ups_free_method: %noValue%
+                ups_free_shipping_with_minimum_order_amount: %noValue%
+                ups_minimum_order_amount_for_free_shipping: %noValue%
+                ups_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                ups_ship_to_applicable_countries: All Allowed Countries
+                ups_ship_to_specific_countries: %noValue%
+                ups_debug: Yes
+                ups_show_method_if_not_applicable: Yes
+                ups_sort_order: %noValue%
 
 usps_enable:
     configuration_scope: Default Config
