--- a/fixture/default/core/Mage/SystemConfiguration/data/ShippingSettings.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/data/ShippingSettings.yml
@@ -30,37 +30,41 @@ store_information:
     tab_1:
         tab_name: general_general
         configuration:
-            store_name: Test Store Name
+            store_information:
+                store_name: Test Store Name
 
 shipping_settings_usa:
     configuration_scope: Default Config
     tab_1:
         tab_name: sales_shipping_settings
         configuration:
-            country: United States
-            origin_state: California
-            zip_postal_code: 90034
-            city: Los Angeles
-            street_address: 3212 Bagley Avenue
+            origin:
+                country: United States
+                origin_state: California
+                zip_postal_code: 90034
+                city: Los Angeles
+                street_address: 3212 Bagley Avenue
 
 shipping_settings_france:
     configuration_scope: Default Config
     tab_1:
         tab_name: sales_shipping_settings
         configuration:
-            country: France
-            origin_state: Dordogne
-            zip_postal_code: 24100
-            city: Bergerac
-            street_address: 10, rue Jean Vilar
+            origin:
+                country: France
+                origin_state: Dordogne
+                zip_postal_code: 24100
+                city: Bergerac
+                street_address: 10, rue Jean Vilar
 
 shipping_settings_default:
     configuration_scope: Default Config
     tab_1:
         tab_name: sales_shipping_settings
         configuration:
-            country: United States
-            origin_state: California
-            zip_postal_code: 90034
-            city:
-            street_address:
+            origin:
+                country: United States
+                origin_state: California
+                zip_postal_code: 90034
+                city: ''
+                street_address: ''
