--- a/fixture/enterprise/core/Mage/SystemConfiguration/data/StagingWebsite.yml
+++ b/fixture/enterprise/core/Mage/SystemConfiguration/data/StagingWebsite.yml
@@ -30,12 +30,14 @@ staging_website_disable_auto_entries:
     tab_1:
         tab_name: general_general
         configuration:
-            automatically_create_entry_points_for_staging_website: No
+            staging_websites:
+                automatically_create_entry_points_for_staging_website: No
 
 staging_website_enable_auto_entries:
     configuration_scope: Default Config
     tab_1:
         tab_name: general_general
         configuration:
-            automatically_create_entry_points_for_staging_website: Yes
-            folder_name_for_entry_points: staging
+            staging_websites:
+                automatically_create_entry_points_for_staging_website: Yes
+                folder_name_for_entry_points: staging
