--- a/fixture/enterprise/core/Mage/SystemConfiguration/data/Tax.yml
+++ b/fixture/enterprise/core/Mage/SystemConfiguration/data/Tax.yml
@@ -30,32 +30,39 @@ default_tax_config:
     tab_1:
         tab_name: sales_tax
         configuration:
-            tax_class_for_shipping: None
-            tax_class_for_gift_options: None
-            tax_calculation_method_based_on: Total
-            tax_calculation_based_on: Shipping Address
-            catalog_prices: Excluding Tax
-            shipping_prices: Excluding Tax
-            apply_customer_tax: Before Discount
-            apply_discount_on_prices: Excluding Tax
-            apply_tax_on: Custom price if available
-            default_country: United States
-            default_state: '*'
-            default_post_code: '*'
-            display_product_prices_in_catalog: Excluding Tax
-            display_shipping_prices: Excluding Tax
-            sc_display_prices: Excluding Tax
-            sc_display_subtotal: Excluding Tax
-            sc_display_shipping_amount: Excluding Tax
-            sc_display_gift_wrapping_prices: Excluding Tax
-            sc_display_printed_card_prices: Excluding Tax
-            sc_include_tax_in_grand_total: No
-            sc_display_full_tax_summary: No
-            sc_display_zero_tax_subtotal: No
-            oic_display_prices: Excluding Tax
-            oic_display_subtotal: Excluding Tax
-            oic_display_shipping_amount: Excluding Tax
-            oic_include_tax_in_grand_total: No
-            oic_display_full_tax_summary: No
-            oic_display_zero_tax_subtotal: No
-            enable_fpt: No
+            tax_classes:
+                tax_class_for_shipping: None
+                tax_class_for_gift_options: None
+            calculation_settings:
+                tax_calculation_method_based_on: Total
+                tax_calculation_based_on: Shipping Address
+                catalog_prices: Excluding Tax
+                shipping_prices: Excluding Tax
+                apply_customer_tax: Before Discount
+                apply_discount_on_prices: Excluding Tax
+                apply_tax_on: Custom price if available
+            default_tax_destination_calculation:
+                default_country: United States
+                default_state: '*'
+                default_post_code: '*'
+            price_display_settings:
+                display_product_prices_in_catalog: Excluding Tax
+                display_shipping_prices: Excluding Tax
+            shopping_cart_display_settings:
+                sc_display_prices: Excluding Tax
+                sc_display_subtotal: Excluding Tax
+                sc_display_shipping_amount: Excluding Tax
+                sc_display_gift_wrapping_prices: Excluding Tax
+                sc_display_printed_card_prices: Excluding Tax
+                sc_include_tax_in_grand_total: No
+                sc_display_full_tax_summary: No
+                sc_display_zero_tax_subtotal: No
+            orders_invoices_creditmemos_display_settings:
+                oic_display_prices: Excluding Tax
+                oic_display_subtotal: Excluding Tax
+                oic_display_shipping_amount: Excluding Tax
+                oic_include_tax_in_grand_total: No
+                oic_display_full_tax_summary: No
+                oic_display_zero_tax_subtotal: No
+            enable_fpt:
+                enable_fpt: No
