--- a/fixture/default/core/Mage/SystemConfiguration/data/ShippingMethod.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/data/ShippingMethod.yml
@@ -50,8 +50,9 @@ tablerate_enable:
         tab_name: sales_shipping_methods
         configuration:
             table_rates:
-                table_rates_enabled: Yes
-                table_rates_ship_to_applicable_countries: All Allowed Countries
+                table_rates:
+                    table_rates_enabled: Yes
+                    table_rates_ship_to_applicable_countries: All Allowed Countries
 
 free_enable:
     configuration_scope: Default Config
@@ -118,7 +119,7 @@ upsxml_enable:
                 ups_shipper_number: 207W88
                 ups_container: %noValue%
                 ups_destination_type: %noValue%
-                ups_tracking_xml_url: net uimap
+                ups_tracking_xml_url: https://www.ups.com/ups.app/xml/Track
                 ups_pickup_method: %noValue%
                 ups_maximum_package_weight: 150
                 ups_minimum_package_weight: 0.1
@@ -141,69 +142,77 @@ usps_enable:
     tab_1: &usps
         tab_name: sales_shipping_methods
         configuration:
-            usps_enabled_for_checkout: Yes
-            usps_gateway_url: http://production.shippingapis.com/ShippingAPI.dll
-            usps_secure_gateway_url: https://secure.shippingapis.com/ShippingAPI.dll
-            usps_title: United States Postal Service
-            usps_user_id: 213MAGEN6752
-            usps_password: 326ZL84XF990
-            usps_maximum_package_weight: 70
-            usps_allowed_methods: All
-            usps_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            usps_ship_to_applicable_countries: All Allowed Countries
-            usps_debug: Yes
-            usps_show_method_if_not_applicable: Yes
-            usps_sort_order: %noValue%
+            usps:
+                usps_enabled_for_checkout: Yes
+                usps_gateway_url: http://production.shippingapis.com/ShippingAPI.dll
+                usps_secure_gateway_url: https://secure.shippingapis.com/ShippingAPI.dll
+                usps_title: United States Postal Service
+                usps_user_id: 213MAGEN6752
+                usps_password: 326ZL84XF990
+                usps_maximum_package_weight: 70
+                usps_allowed_methods: All
+                usps_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                usps_ship_to_applicable_countries: All Allowed Countries
+                usps_debug: Yes
+                usps_show_method_if_not_applicable: Yes
+                usps_sort_order: %noValue%
 
 fedex_enable:
     configuration_scope: Default Config
     tab_1: &fedex
         tab_name: sales_shipping_methods
         configuration:
-            fedex_enabled_for_checkout: Yes
-            fedex_title: Federal Express
-            fedex_account_id: 510087801
-            fedex_meter_number: 100047915
-            fedex_key: INdxa6ug7qZ2KD7y
-            fedex_password: 4vaGsDBmeBCzvpl1S1DT1jXAB
-            fedex_sandbox_mode: Yes
-            fedex_maximum_package_weight: 150
-            fedex_residential_delivery: Yes
-            fedex_allowed_methods: all
-            fedex_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            fedex_ship_to_applicable_countries: All Allowed Countries
-            fedex_debug: Yes
-            fedex_show_method_if_not_applicable: Yes
-            fedex_sort_order: %noValue%
+            fedex:
+                fedex_enabled_for_checkout: Yes
+                fedex_title: Federal Express
+                fedex_account_id: 510087801
+                fedex_meter_number: 100047915
+                fedex_key: INdxa6ug7qZ2KD7y
+                fedex_password: 4vaGsDBmeBCzvpl1S1DT1jXAB
+                fedex_sandbox_mode: Yes
+                fedex_maximum_package_weight: 150
+                fedex_residential_delivery: Yes
+                fedex_allowed_methods: all
+                fedex_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                fedex_ship_to_applicable_countries: All Allowed Countries
+                fedex_debug: Yes
+                fedex_show_method_if_not_applicable: Yes
+                fedex_sort_order: %noValue%
 
 dhl_enable:
     configuration_scope: Default Config
     tab_1: &dhl
         tab_name: sales_shipping_methods
         configuration:
-            dhl_enabled: Yes
-            dhl_gateway_url: HTTPS://eCommerce.airborne.com/ApiLandingTest.asp
-            dhl_title: DHL
-            dhl_access_id: MAGEN_8501
-            dhl_password: QR2GO1U74X
-            dhl_account_number: 799909537
-            dhl_shipping_key_int: 54233F2B2C4E5C4B4C5E5A59565530554B405641475D5659
-            dhl_shipping_key: %noValue%
-            dhl_maximum_package_weight: 150
-            dhl_allowed_methods: all
-            dhl_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
-            dhl_ship_to_applicable_countries: All Allowed Countries
-            dhl_show_method_if_not_applicable: Yes
-            dhl_debug: Yes
-            dhl_sort_order: %noValue%
+            dhl:
+                dhl_enabled: Yes
+                dhl_gateway_url: HTTPS://eCommerce.airborne.com/ApiLandingTest.asp
+                dhl_title: DHL
+                dhl_access_id: MAGEN_8501
+                dhl_password: QR2GO1U74X
+                dhl_account_number: 799909537
+                dhl_shipping_key_int: 54233F2B2C4E5C4B4C5E5A59565530554B405641475D5659
+                dhl_shipping_key: %noValue%
+                dhl_maximum_package_weight: 150
+                dhl_allowed_methods: all
+                dhl_displayed_error_message: This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.
+                dhl_ship_to_applicable_countries: All Allowed Countries
+                dhl_show_method_if_not_applicable: Yes
+                dhl_debug: Yes
+                dhl_sort_order: %noValue%
 
 shipping_disable:
     configuration_scope: Default Config
     tab_1:
         tab_name: sales_shipping_methods
         configuration:
-            fedex_enabled_for_checkout: No
-            usps_enabled_for_checkout: No
-            ups_enabled: No
-            free_shipping_enabled: No
-            dhl_enabled: No
+            fedex:
+                fedex_enabled_for_checkout: No
+            usps:
+                usps_enabled_for_checkout: No
+            ups:
+                ups_enabled: No
+            free_shipping:
+                free_shipping_enabled: No
+            dhl:
+                dhl_enabled: No
