--- a/fixture/default/core/Mage/CmsPage/uimap/admin/CmsPage.yml
+++ b/fixture/default/core/Mage/CmsPage/uimap/admin/CmsPage.yml
@@ -95,8 +95,8 @@ create_cms_page:
                                 wysiwyg_editor_buttons:
                                     xpath: //*[@id='page_content_tbl']
                                     links:
-                                        wysiwyg_insert_widget: //a[@id='page_content_magentowidget']/img
-                                        wysiwyg_insert_variable: //a[@id='page_content_magentovariable']/img
+                                        wysiwyg_insert_widget: //a[@id='page_content_magentowidget']
+                                        wysiwyg_insert_variable: //a[@id='page_content_magentovariable']
                             -
                                 content_fieldset:
                                     xpath: //div[@id='page_tabs_content_section_content']
